nivasa-macros/tests/trybuild/validation_validate_if_malformed.stderr
error: expected `#[validate_if(field_name, "value")]`
 --> tests/trybuild/validation_validate_if_malformed.rs:5:5
  |
5 |     #[validate_if]
  |     ^
